--- a/stylehonk.css
+++ b/stylehonk.css
@@ -9,12 +9,14 @@ body{
   height: 100vh;
   width: auto;
   z-index: -1;
+  position: absolute;
 }
 #animate {
   position: relative;
   height: 100px;
   width: auto;
   z-index: 1;
+  margin-top: 150px;
 }
 
 #animate img{
