--- a/stylehonk.css
+++ b/stylehonk.css
@@ -23,3 +23,28 @@ body{
   height: 300px;
   width: auto;
 }
+
+@media only screen and (max-width: 768px) {
+  #duck {
+    margin: 0 0; /* Adjusted margin for smaller screens */
+    height: 60vh;
+    width: auto;
+  }
+  #animate {
+    
+    margin-top: 80px;
+  }
+}
+
+/* For tablets (portrait and landscape) */
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  #duck {
+    margin: 0 0; /* Adjusted margin for smaller screens */
+    height: 60vh;
+    width: auto;
+  }
+  #animate {
+    
+    margin-top: 80px;
+  }
+}
